--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'cn.bingoogolapple:bga-banner:2.2.5@aar'
     implementation 'com.android.support:support-v4:26.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.google.zxing:core:3.3.0'
     configurations.all {
         resolutionStrategy.force 'com.android.support:support-annotations:26.1.0'
     }
