--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="inspect.cegzm.com">
 
     <!-- 允许程序打开网络套接字 -->
@@ -14,6 +15,12 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- 允许程序访问CellID或WiFi热点来获取粗略的位置 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- 粗略定位授权 -->
+    <!-- 精细定位授权 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions"/>
+    <uses-permission android:name="android.permission.READ_NETWORK_USAGE_HISTORY" tools:ignore="ProtectedPermissions"/>
 
     <application
         android:name=".MyApplication"
@@ -23,15 +30,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BannerTest">
+        <activity android:name=".GpsTestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"></activity>
-        <!--<activity android:name=".BannerTest"></activity>-->
+        <activity android:name=".LoginActivity" />
+        <!-- <activity android:name=".BannerTest"></activity> -->
+        <meta-data
+            android:name="inspect.cegzm.com.GlidCache"
+            android:value="GlideModule" />
+
+        <!-- <activity android:name=".GpsTestActivity"></activity> -->
+        <!--<activity android:name=".FlowTestActivity"></activity>-->
     </application>
 
 </manifest>
